<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@color/grey"
        android:layout_weight="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/lightGrey"
            android:gravity="center">

            <TextView
                android:id="@+id/tvStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tvConnectionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvStatusLabel"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/bLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_button"
                android:textAllCaps="false"
                android:textColor="@color/colorAccentDark"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvChat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:background="@color/white"
            android:layout_weight="90">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey"
        android:text="@string/no_messages"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCompose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/new_message" />

</FrameLayout>